# bioshift

./: .gitignore  README.md  astro.config.mjs  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
docs/: astro.config.mjs  make.sh  markdowndocs.py  package-lock.json  package.json
docs/source/: conf.py  index.rst  modules.rst
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: getting_started.mdx
docs/src/content/docs/reference/: api.md  (+2 more)
docs/src/styles/: style.css
scripts/: downloadshifttables.py
src/bioshift/: __init__.py
src/bioshift/analysis/: __init__.py  analysisnode.py  deconvolve.py  differenceofgaussians.py  filters.py  findalignedpeaks.py  gaussianmodel.py  gaussianpeakfitting.py  node.py  noderegistry.py  peak.py  peakpicker.py  peakpicking.py  pipeline.py  predictionfromshifts.py  restrictedpick.py
src/bioshift/analysis/assignment/: __init__.py  findalignedpeaks.py  predictionfromshifts.py
src/bioshift/analysis/nodes/: math.py
src/bioshift/analysis/peakpicking/: __init__.py  differenceofgaussians.py  gaussianpeakfitting.py  restrictedpick.py
src/bioshift/constants/: __init__.py  aminoacids.py
src/bioshift/core/: __init__.py  assignment.py  constants.py  mock.py  nucleus.py  peak.py  peakpicking.py  spectrum.py  spectrumdatasource.py  spectrumparams.py  spectrumreference.py  spectrumtransform.py  structure.py
src/bioshift/fileio/: __init__.py  azara.py  blockedspectrum.py  loadspectrum.py  nmrpipe.py  spectrumdatasource.py  spectrumreader.py  ucsf.py  xeasy.py
src/bioshift/io/: __init__.py  _xeasy.py  azara.py  blockedspectrum.py  loadspectrum.py  spectrumreader.py  ucsf.py
src/bioshift/pipelines/: node.py  noderegistry.py  pipeline.py
src/bioshift/spectra/: __init__.py  spectrum.py  spectrumdatasource.py  spectrumtransform.py
src/bioshift/visualization/: __init__.py  plot.py  sliceviewer.py
src/content/docs/: index.mdx
src/protnmr/core/: spectrum.py  spectrumparams.py  spectrumreference.py
src/protnmr/fileio/: azara.py  loadspectrum.py  nmrpipe.py  spectrumdatasource.py  spectrumreader.py  ucsf.py
tests/core/: test_spectrumreference.py  test_spectrumtransform.py
