[project]
name = "bioshift"
version = "0.1.0"
description = "Analysis tools for biological NMR spectra."
authors = [
    { name = "Chloe Fisher", email = "dev@chlofisher.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.0",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "pdoc>=15.0.4",
    "pdoc-md",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.uv.sources]
pdoc-md = { path = "../pdoc-md" }
