[project]
name = "bioshift"
version = "0.1.0"
description = "Analysis tools for biological NMR spectra."
authors = [
    { name = "Chloe Fisher", email = "dev@chlofisher.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "jax>=0.7.0",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.5",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
