[project]
name = "bioshift"
version = "0.1.0"
description = "Analysis tools for biological NMR spectra."
authors = [
    { name = "Chloe Fisher", email = "dev@chlofisher.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "jax>=0.7.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.1",
    "scikit-image>=0.25.2",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.5",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scipy-stubs>=1.16.2.3",
]
plot = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
